Avoid column break inside list items

--- a/busstops/static/css/_base.scss
+++ b/busstops/static/css/_base.scss
@@ -118,6 +118,9 @@ ul, ol {
 }
 
 main li {
+    -webkit-column-break-inside: avoid;
+    break-inside: avoid;
+
     a {
         display: block;
         overflow: hidden;
